Cloth modifier acts erratically #60836

Closed
opened 2019-01-24 21:32:47 +01:00 by Thierry · 12 comments

System Information
Operating system: WIN10 64
Graphics card: GeForce GTX 560 Ti and another GeForce GTX 560 Ti - SLI disabled (like for 2.79b who use them perfectly without SLI)

Blender Version
Broken:
blender-2.80.0-git.1d908bffddb4-windows64
Worked: (optional)
2.79b-windows64

Short description of error
Cloth modifier acts erratically, do not stand still when it should, tremble or make quick movements + message : "No compatible GPUs found" in Blender Preferences - Cycles Render Devices

Exact steps for others to reproduce the error
Just run animation

Mr Frite me Jiggle.blend

**System Information** Operating system: WIN10 64 Graphics card: GeForce GTX 560 Ti and another GeForce GTX 560 Ti - SLI disabled (like for 2.79b who use them perfectly without SLI) **Blender Version** Broken: blender-2.80.0-git.1d908bffddb4-windows64 Worked: (optional) 2.79b-windows64 **Short description of error** Cloth modifier acts erratically, do not stand still when it should, tremble or make quick movements + message : "No compatible GPUs found" in Blender Preferences - Cycles Render Devices **Exact steps for others to reproduce the error** Just run animation [Mr Frite me Jiggle.blend](https://archive.blender.org/developer/F6392747/Mr_Frite_me_Jiggle.blend)
Author

Added subscriber: @Thierrylomenede

Added subscriber: @Thierrylomenede
Author

Cloth modifier acts erratically, do not stand still when it should, tremble or make quick movements + message : "No compatible GPUs found" in Blender Preferences - Cycles Render Devices

Cloth modifier acts erratically, do not stand still when it should, tremble or make quick movements + message : "No compatible GPUs found" in Blender Preferences - Cycles Render Devices
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Could you please be more specific about the movement you mean? The orange character in the beginning? And where is the cloth modifier?

Can you try to remove everything that is not necessary to reproduce the bug?

Could you please be more specific about the movement you mean? The orange character in the beginning? And where is the cloth modifier? Can you try to remove everything that is not necessary to reproduce the bug?
Author

(Sorry) OK so (new files added)

  • in "Mr Frite me Jiggle1.blend"

Each bone (in "Armatures" collection) have a "stretch to" bone constraint to a vertex group of a four edges geometry with cloth physics (in "Edges with cloth sim" collection)

All bones and geometries have the same propriety (copy) but when supposed to be idle (no animation) they don't stay idle at all, all in a different way, like "glitches" or something...

  • in "Mr Frite me Jiggle1 - Copie" with Alembic "Mr Frite me Jiggle1 - Copie.abc" in

You can see what I mean by erratically as you run the animation

Thank you{F6403011}

Mr Frite me Jiggle1.blend

Mr Frite me Jiggle1 - Copie.blend

(Sorry) OK so (new files added) - > in "Mr Frite me Jiggle1.blend" Each bone (in "Armatures" collection) have a "stretch to" bone constraint to a vertex group of a four edges geometry with cloth physics (in "Edges with cloth sim" collection) All bones and geometries have the same propriety (copy) but when supposed to be idle (no animation) they don't stay idle at all, all in a different way, like "glitches" or something... - > in "Mr Frite me Jiggle1 - Copie" with Alembic "Mr Frite me Jiggle1 - Copie.abc" in You can see what I mean by erratically as you run the animation Thank you{[F6403011](https://archive.blender.org/developer/F6403011/Mr_Frite_me_Jiggle1_-_Copie.abc)} [Mr Frite me Jiggle1.blend](https://archive.blender.org/developer/F6403012/Mr_Frite_me_Jiggle1.blend) [Mr Frite me Jiggle1 - Copie.blend](https://archive.blender.org/developer/F6403013/Mr_Frite_me_Jiggle1_-_Copie.blend)
Author

Mr Frite me Jiggle1 - Copie - Copie.blend
please rename "Mr Frite me Jiggle1 - Copie - Copie.blend" in "Mr Frite me Jiggle1 - Copie.abc"

[Mr Frite me Jiggle1 - Copie - Copie.blend](https://archive.blender.org/developer/F6403065/Mr_Frite_me_Jiggle1_-_Copie_-_Copie.blend) please rename "Mr Frite me Jiggle1 - Copie - Copie.blend" in "Mr Frite me Jiggle1 - Copie.abc"

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This doesn't seem to be cloth sim related, it seems to be more about the Stretch To bone constraint. In Mr Frite me Jiggle1.blend, just to show case that this is not cloth related, remove the cloth sim on all four objects.

Next, select the left most armature Armature.004, go into pose mode and select the first bone (named Bone) with the Stretch To constraint. Click and drag on the influence bar. Notice that the bone snaps to the position of the initial mesh and back again.

This doesn't seem to be cloth sim related, it seems to be more about the `Stretch To` bone constraint. In `Mr Frite me Jiggle1.blend`, just to show case that this is not cloth related, remove the cloth sim on all four objects. Next, select the left most armature `Armature.004`, go into pose mode and select the first bone (named `Bone`) with the `Stretch To` constraint. Click and drag on the influence bar. Notice that the bone snaps to the position of the initial mesh and back again.
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-30 18:15:01 +01:00

@ZedDB, mind uploading simplified .blend, with all the unrelated parts removed, and proper bone selected?

@ZedDB, mind uploading simplified .blend, with all the unrelated parts removed, and proper bone selected?

@Sergey here you go:
bone_test.blend

@Sergey here you go: [bone_test.blend](https://archive.blender.org/developer/F6455571/bone_test.blend)

This issue was referenced by 208a0808b3

This issue was referenced by 208a0808b31e374d8116f46e5c8a4be8ced6b289

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60836
No description provided.